--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Teddysoft</groupId>
-    <artifactId>ezKanban</artifactId>
+    <artifactId>cleanKanban</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -85,18 +85,6 @@
 
 
     </dependencies>
-
-
-<!--    <repositories>-->
-<!--        <stageRepository>-->
-<!--            <id>spring-snapshots</id>-->
-<!--            <name>Spring Snapshots</name>-->
-<!--            <url>https://repo.spring.io/libs-snapshot</url>-->
-<!--            <snapshots>-->
-<!--                <enabled>true</enabled>-->
-<!--            </snapshots>-->
-<!--        </stageRepository>-->
-<!--    </repositories>-->
 
 
 </project>
