--- a/pom.xml
+++ b/pom.xml
@@ -77,17 +77,24 @@
         <!--</dependency>-->
 
 
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-web</artifactId>-->
+<!--            <version>2.0.2.RELEASE</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.0.2.RELEASE</version>
+            <version>2.1.5.RELEASE</version>
         </dependency>
+
 
 
         <dependency>
             <groupId>org.springframework.shell</groupId>
             <artifactId>spring-shell-starter</artifactId>
-            <version>2.0.1.BUILD-SNAPSHOT</version>
+            <version>2.0.1.RELEASE</version>
         </dependency>
 
 
