--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>de.cronn</groupId>
+            <artifactId>reflection-util</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+
+
     </dependencies>
 
 
