--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <version>2.4.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.1-jre</version>
+        </dependency>
 
     </dependencies>
 
